--- a/index.html
+++ b/index.html
@@ -10,73 +10,69 @@
 
 <!-- Loading Screen -->
 <div id="loader">
-    <div class="loader-content">
-        <p id="loadingText">Loading...</p>
-        <div class="loader-bar">
-            <div id="loaderProgress"></div>
-        </div>
-    </div>
+  <div class="loader-content">
+    <p id="loadingText">Loading...</p>
+    <div class="loader-bar"><div id="loaderProgress"></div></div>
+  </div>
 </div>
 
 <!-- Live Members Widget -->
 <div id="memberWidget">
-    <p>Live Members: <span id="liveMembers">404</span></p>
+  <p>Live Members: <span id="liveMembers">404</span></p>
 </div>
 
-<!-- NAVBAR -->
+<!-- Navbar -->
 <nav id="navbar">
-    <h2 class="logo">Tanukizaki</h2>
-    <ul>
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#staff">Staff</a></li>
-        <li><a href="#updates">Updates</a></li>
-        <li><a href="#join">Join Us</a></li>
-        <li><button id="themeToggle">🌙</button></li>
-    </ul>
+  <h2 class="logo">Tanukizaki</h2>
+  <ul>
+    <li><a href="#hero">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#staff">Staff</a></li>
+    <li><a href="#updates">Updates</a></li>
+    <li><a href="#join">Join Us</a></li>
+    <li><button id="themeToggle">🌙</button></li>
+  </ul>
 </nav>
 
-<!-- HERO SECTION -->
+<!-- Hero Section -->
 <section id="hero" class="section hidden">
-    <h1 class="title">Tanukizaki</h1>
-    <p class="subtitle">A modern VBL server + Community</p>
-    <p class="subtext">We are a growing VBL community — friendly, fun, and well-operated. Join us now!</p>
-    <a href="#join" class="btn hero-btn">Join Now</a>
+  <h1 class="title">Tanukizaki</h1>
+  <p class="subtitle">A modern VBL server + Community</p>
+  <p class="subtext">We are a growing VBL community — friendly, fun, and well-operated. Join us now!</p>
+  <a href="#join" class="btn hero-btn">Join Now</a>
 </section>
 
-<!-- ABOUT -->
+<!-- About Section -->
 <section id="about" class="section hidden">
-    <h2>About Us</h2>
-    <p>
-        Our Founder, Meow, started Tanukizaki with the mission to create a positive, enjoyable VBL space. 
-        Since then, we have worked hard every day to improve operations and give all members the best experience!
-    </p>
+  <h2>About Us</h2>
+  <p>
+    Our Founder, Meow, started Tanukizaki to create a positive VBL community.
+    We work daily to improve operations and give members the best experience!
+  </p>
 </section>
 
-<!-- STAFF -->
+<!-- Staff Section -->
 <section id="staff" class="section hidden">
-    <h2>Staff Team</h2>
-    <div id="staff-container" class="staff-grid"></div>
+  <h2>Staff Team</h2>
+  <div id="staff-container" class="staff-grid"></div>
 </section>
 
-<!-- UPDATES -->
+<!-- Updates Section -->
 <section id="updates" class="section hidden">
-    <h2>Latest Updates</h2>
-    <p>Updates will appear here soon!</p>
+  <h2>Latest Updates</h2>
+  <p>Updates will appear here soon!</p>
 </section>
 
-<!-- JOIN US -->
+<!-- Join Us Section -->
 <section id="join" class="section hidden">
-    <h2>Join Us</h2>
-    <p class="join-desc">
-        We are a gaming VBL community — friendly, fun, and the most well-operated server! Join us now!
-    </p>
-    <a class="btn join-btn" href="https://discord.gg/TVJdth4fsu" target="_blank">Join Discord</a>
+  <h2>Join Us</h2>
+  <p class="join-desc">We are a gaming VBL community — friendly, fun, and the most well-operated server! Join us now!</p>
+  <a class="btn join-btn" href="https://discord.gg/TVJdth4fsu" target="_blank">Join Discord</a>
 </section>
 
-<!-- FOOTER -->
+<!-- Footer -->
 <footer>
-    <p>Developed by: Solomon</p>
+  <p>Developed by: Solomon</p>
 </footer>
 
 <script src="script.js"></script>
