--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tanukizaki</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -45,10 +45,7 @@
 <!-- About Section -->
 <section id="about" class="section hidden">
   <h2>About Us</h2>
-  <p>
-    Our Founder, Meow, started Tanukizaki to create a positive VBL community.
-    We work daily to improve operations and give members the best experience!
-  </p>
+  <p>Our Founder, Meow, started Tanukizaki to create a positive VBL community. We work daily to improve operations and give members the best experience!</p>
 </section>
 
 <!-- Staff Section -->
