--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
     <!-- UPDATES -->
     <section id="updates" class="section reveal">
       <h2>Updates</h2>
-      <p>Latest updates will appear here.</p>
+      <p>Website Launch!
+         Custom Bots!
+         Smoother Staff Operations!</p>
     </section>
 
     <!-- JOIN -->
@@ -113,3 +115,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
