--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <label for="todoUsername">Username (required)</label>
     <input id="todoUsername" type="text" placeholder="Enter your username" />
 
-    <label for="todoLink">Link (required)</label>
+    <label for="todoLink">Video Link (required)</label>
     <input id="todoLink" type="url" placeholder="https://..." />
 
     <div class="tasks">
@@ -115,4 +115,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
