--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
       <div id="staffContainer" class="staff-grid" aria-live="polite"></div>
     </section>
 
+<section id="scrim" class="section fade-up">
+    <h2>Scrim Records</h2>
+
+    <div class="scrim-grid" id="scrimGrid"></div>
+</section>
+
+
     <!-- UPDATES -->
     <section id="updates" class="section reveal">
       <h2>Updates</h2>
@@ -115,5 +122,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
