--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <a href="#staff">Staff</a>
       <a href="#updates">Updates</a>
       <a href="#join">Join</a>
+      <a href="#scrims">Scrims</a>
       <button id="themeToggle" aria-label="Toggle theme">🌙</button>
     </div>
   </nav>
@@ -122,6 +123,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
